--- a/html-css/desafios/desafio12/estilo/style.css
+++ b/html-css/desafios/desafio12/estilo/style.css
@@ -72,16 +72,22 @@ section.normal {
 section.imagem {
     background-color: rgba(36, 36, 36, 0.959);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.486) ;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     width: 400px;
-    background-color: rgb(26, 25, 25);
+    background-color: rgba(26, 25, 25, 0.37);
+    display: inline-block;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.37);
 }
 
 section#img01 {
     background-image: url(../imagens/background001.jpg);
-    
+    background-position: right center;
+    background-size: cover;
+     
 }
 
 section#img02 {
