--- a/html-css/exercicios/media quere/mq002/estilos/retrato.css
+++ b/html-css/exercicios/media quere/mq002/estilos/retrato.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
-/* aparelho em pé (portrait) */
+/* aparelho deitado (landscape) */
+
+body {
+    background: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+}
