--- a/html-css/exercicios/media quere/mq004/estilos/media-query.css
+++ b/html-css/exercicios/media quere/mq004/estilos/media-query.css
@@ -14,27 +14,37 @@ Grandes Telas: acima de 1200px
   /* IMPRESSÃO */
 
   * {
-    font-family: 'Courier New', Courier, monospace;
-}
+    font-family: "Courier New", Courier, monospace;
+  }
 
-body {
+  body {
     background-image: url(../imagens/icon-print.png);
-}
+  }
 
-main {
+  main {
     border: 2px solid black;
-}
+  }
 
-main > h1 {
+  main > h1 {
     text-shadow: none;
     color: black;
-}
+  }
 
-img#phone {display: none;}
-  img#tablet {display: none;}
-  img#print {display: block;}
-  img#pc {display: none;}
-  img#tv {display: none;}
+  img#phone {
+    display: none;
+  }
+  img#tablet {
+    display: none;
+  }
+  img#print {
+    display: block;
+  }
+  img#pc {
+    display: none;
+  }
+  img#tv {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
@@ -44,13 +54,22 @@ img#phone {display: none;}
     background-image: url(../imagens/back-tablet.jpg);
   }
 
-  img#phone {display: none;}
-  img#tablet {display: block;}
-  img#print {display: none;}
-  img#pc {display: none;}
-  img#tv {display: none;}
-
+  img#phone {
+    display: none;
   }
+  img#tablet {
+    display: block;
+  }
+  img#print {
+    display: none;
+  }
+  img#pc {
+    display: none;
+  }
+  img#tv {
+    display: none;
+  }
+}
 
 @media screen and (min-width: 992px) and (max-width: 1200px) {
   /* DESKTOP */
@@ -58,11 +77,21 @@ img#phone {display: none;}
     background-image: url(../imagens/back-pc.jpg);
   }
 
-  img#phone {display: none;}
-  img#tablet {display: none;}
-  img#print {display: none;}
-  img#pc {display: block;}
-  img#tv {display: none;}
+  img#phone {
+    display: none;
+  }
+  img#tablet {
+    display: none;
+  }
+  img#print {
+    display: none;
+  }
+  img#pc {
+    display: block;
+  }
+  img#tv {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -72,9 +101,19 @@ img#phone {display: none;}
     background-image: url(../imagens/back-tv.jpg);
   }
 
-  img#phone {display: none;}
-  img#tablet {display: none;}
-  img#print {display: none;}
-  img#pc {display: none;}
-  img#tv {display: block;}
+  img#phone {
+    display: none;
+  }
+  img#tablet {
+    display: none;
+  }
+  img#print {
+    display: none;
+  }
+  img#pc {
+    display: none;
+  }
+  img#tv {
+    display: block;
+  }
 }
